--- a/AssetManagerAPI/index.html
+++ b/AssetManagerAPI/index.html
@@ -13,7 +13,7 @@
             </button>
         </div>
         <div class="progress" ng-hide="loadComplete" style="height:50px">
-            <div class="progress-bar progress-bar-striped progress-bar-animated"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">Loading...</div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">Loading...</div>
         </div>
         <div ng-show="loadComplete" ng-cloak>
             <table class="table table-hover">
@@ -26,16 +26,11 @@
                     </tr>
                 </thead>
                 <tbody ng-repeat="x in history">
-                    <tr>
+                    <tr data-toggle="modal" data-target="#editModal" ng-click="setDetails(x)">
                         <td>{{x.AssetTag}}</td>
                         <td>{{x.CheckedOutBy}}</td>
-                        <td>{{x.CheckedOutDate}}</td>
-                        <td>{{x.CheckedInDate}}</td>
-                        <td>
-                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#checkInModal" ng-click="setDetails(x)" ng-hide="x.CheckedInDate != null">
-                                Check In
-                            </button>
-                        </td>
+                        <td>{{x.CheckedOutDate | date: "MM-dd-yy @ hh:mm:ss a"}}</td>
+                        <td>{{x.CheckedInDate | date: "MM-dd-yy @ hh:mm:ss a"}}</td>
                     </tr>
                 </tbody>
             </table>
@@ -88,6 +83,38 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary" ng-click="checkInAsset()" data-dismiss="modal">Check In</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" ng-model="details">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Details</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="editForm">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Asset Identifier</label>
+                            <input type="text" disabled ng-model="details.assetTag" class="form-control" id="assetIdentifier" aria-describedby="assetIdentifier" placeholder="Enter Asset Identifier">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Checked Out By</label>
+                            <input type="text" disabled ng-model="details.checkedOutBy" class="form-control" id="checkedOutBy" placeholder="e.g. FS123456">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <div class="col-sm-12">
+                        <button type="button" class="btn btn-danger" ng-click="removeItem()" data-dismiss="modal">Delete</button>
+                        <button type="button" style="float:right" class="btn btn-primary" ng-disabled="!details.CheckedOutDate == null" ng-click="checkInAsset()" data-dismiss="modal">Check In</button>
+                    </div>
                 </div>
             </div>
         </div>
